# MedicalTriage

./: .dockerignore  .env.example  .gitignore  CHANGELOG_REFACTOR.md  CODEBASE_ANALYSIS.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT.md  Dockerfile  FINAL_ANALYSIS_REPORT.md  LLM_SETUP.md  MIGRATION.md  README.md  benchmark_final.csv  benchmark_smoke.csv  benchmark_task23_audit.csv  benchmark_test_final.csv  diagnostic_api_call.py  docker-compose.yml  git_diff.txt  inference.py  openenv.yaml  pyproject.toml  pytest_out.txt  requirements.txt  run_robustness_pipeline.sh  task2_progression_report.csv  task3_after_train.csv  task3_baseline.csv  task3_cycle1.csv  task3_cycle2.csv  task3_cycle3.csv  task3_cycle4.csv  task3_cycle5.csv  task3_now.csv  task3_opt1.csv  task3_opt2.csv  task3_restore.csv  validate-submission.ps1  validate-submission.sh  validate_out.txt  (+1 more)
deployment/: README.md
triage_env/: README.md  __init__.py  client.py  config.py  models.py  openenv.yaml  pyproject.toml  tasks.py
triage_env/agents/: __init__.py  action_parser.py  base_agent.py  llm_agent.py  parser.py  prompt_builder.py  q_learning_agent.py  q_learning_agents.py  random_agent.py  rl_agent.py  rl_agents.py  rule_based_agent.py  trained_q_agent.py
triage_env/docs/: action_space.md  evaluation_plan.md  full_analysis_report.md  reward_plan.md  task_architecture.md  teammate_tasks.md
triage_env/evaluation/: __init__.py  benchmark.py  evaluate_baselines.py  evaluate_random.py  evaluate_rule_based.py  evaluator.py  metrics.py  rule_based_agent.py  run_llm_agent.py  run_rule_based.py  task2_assessment.py  task3_assessment.py
triage_env/graders/: __init__.py  common.py  task1.py  task1_grader.py  task2.py  task2_grader.py  task3.py  task3_grader.py
triage_env/scripts/: compare_baselines.py  evaluate_all_agents.py  evaluate_random.py  evaluate_random_agent.py  evaluate_rl.py  evaluate_rule_based.py  evaluate_rule_based_agent.py  run_benchmark.py  run_llm_agent.py  run_random.py  run_rule_based.py  run_task2_progression.py  run_task3_progression.py  smoke_test.py  train_q_agent.py  train_random.py  train_rl.py  train_task2.py  train_task3.py
triage_env/server/: Dockerfile  __init__.py  app.py  gradio_ui.py  triage_env_environment.py
triage_env/tests/: test_api_endpoints.py  test_benchmark_smoke.py  test_done.py  test_environment.py  test_evaluator_api.py  test_grader_default_episodes.py  test_import_smoke.py  test_llm_parser.py  test_llm_retry_sleep_injection.py  test_readme_contract.py  test_reset.py  test_reward_alignment.py  test_rollout.py  test_script_entrypoints.py  test_state_encoder.py  test_step.py  test_task_reset_behavior.py  test_task_reward_scaling.py  test_tasks_config.py  test_validator_grader_contract.py
triage_env/training/: __init__.py  rollout.py  state_encoder.py  train_q_agent.py  train_rl.py  trainer.py
(+29 files in other folders)
