# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-triage"
version = "0.1.0"
description = "Medical Triage OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "gymnasium>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "triage_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "triage_env",
    "triage_env.agents",
    "triage_env.evaluation",
    "triage_env.training",
    "triage_env.graders",
    "triage_env.server",
    "triage_env.tests",
]

[tool.setuptools.package-data]
triage_env = ["py.typed"]
